feat: Removed create planet endpoint: this should be handled through colonization fleets
